openshift/cart-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cart-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cart-service

  template:
    metadata:
      labels:
        app: cart-service

    spec:
      containers:
        - name: cart-service

          image: image-registry.openshift-image-registry.svc:5000/ariel-izralevitch-dev/cart-service:latest

          ports:
            - containerPort: 8003

          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 10
