openshift/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service

          image: image-registry.openshift-image-registry.svc:5000/ariel-izralevitch-dev/order-service:latest

          ports:
            - containerPort: 8004

          volumeMounts:
            - name: order-storage
              mountPath: /app/data

          readinessProbe: 
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: order-storage
          persistentVolumeClaim:
            claimName: order-pvc
