openshift/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq

  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq

          image: rabbitmq:3-management

          ports:
            - containerPort: 5672
            - containerPort: 15672

          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq

      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
