openshift/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: image-registry.openshift-image-registry.svc:5000/ariel-izralevitch-dev/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
