openshift/cart-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cart-service

spec:
  selector:
    app: cart-service

  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
