openshift/order-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service

spec:
  selector:
    app: order-service

  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
