openshift/storage-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-service
  template:
    metadata:
      labels:
        app: storage-service
    spec:
      containers:
        - name: storage-service
          image: image-registry.openshift-image-registry.svc:5000/ariel-izralevitch-dev/storage-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage-service
  ports:
    - port: 8002
      targetPort: 8002
