openshift/storefront-route.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  name: storefront-route

spec:

  host: storefront-route-ariel-izralevitch-dev.apps.rm2.thpm.p1.openshiftapps.com

  to:
    kind: Service
    name: storefront
    weight: 100

  port:
    targetPort: 8501

  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

  wildcardPolicy: None
